removed padding in main, bug extra space main page PRJ adm inclusion

--- a/adm/index.css
+++ b/adm/index.css
@@ -10,7 +10,6 @@ body{
 
 .main{
     height: 100vh;
-    padding: 5px;
     display:grid;
     place-items: center;
     align-items: center;
